--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
 
     "website": "https://github.com/Amal-ser/AutoFilterBotV3",
 
-    "repository": "https://github.com/Amal-ser/AutoFilterBotV3",
+    "repository": "https://github.com/HKCS04/Autofilterv3",
 
     "env": {
 
